src/features/hover/snapshots/texlab__features__hover__tests__citation_inside_cite.snap
---
source: src/features/hover/tests.rs
assertion_line: 58
expression: hover
---
{
  "contents": {
    "kind": "markdown",
    "value": "F. Bar: \"Baz Qux\". (1337)."
  },
  "range": {
    "start": {
      "line": 1,
      "character": 6
    },
    "end": {
      "line": 1,
      "character": 9
    }
  }
}
