src/features/hover/snapshots/texlab__features__hover__tests__citation_inside_entry.snap
---
source: src/features/hover/tests.rs
assertion_line: 84
expression: hover
---
{
  "contents": {
    "kind": "markdown",
    "value": "F. Bar: \"Baz Qux\". (1337)."
  },
  "range": {
    "start": {
      "line": 0,
      "character": 9
    },
    "end": {
      "line": 0,
      "character": 12
    }
  }
}
