src/features/hover/snapshots/texlab__features__hover__tests__component_known_package.snap
---
source: src/features/hover/tests.rs
assertion_line: 99
expression: hover
---
{
  "contents": {
    "kind": "plaintext",
    "value": "The package provides the principal packages in the AMS-LaTeX distribution. It adapts for use in LaTeX most of the mathematical features found in AMS-TeX; it is highly recommended as an adjunct to serious mathematical typesetting in LaTeX. When amsmath is loaded, AMS-LaTeX packages amsbsy (for bold symbols), amsopn (for operator names) and amstext (for text embedded in mathematics) are also loaded. amsmath is part of the LaTeX required distribution; however, several contributed packages add still further to its appeal; examples are empheq, which provides functions for decorating and highlighting mathematics, and ntheorem, for specifying theorem (and similar) definitions."
  },
  "range": {
    "start": {
      "line": 0,
      "character": 12
    },
    "end": {
      "line": 0,
      "character": 19
    }
  }
}
