src/features/hover/snapshots/texlab__features__hover__tests__string_inside_reference.snap
---
source: src/features/hover/tests.rs
assertion_line: 240
expression: hover
---
{
  "contents": {
    "kind": "plaintext",
    "value": "Bar"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 23
    },
    "end": {
      "line": 2,
      "character": 26
    }
  }
}
